--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
-project(unique_count)
+project(ex_2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(unique_count main.cpp)
+add_executable(ex_2 main.cpp)
